--- a/templates/cv_template_academic_en.tex
+++ b/templates/cv_template_academic_en.tex
@@ -11,35 +11,6 @@
 
 \renewcommand{\ttdefault}{phv} % Uses Helvetica instead of fixed width font
 
-\makeatletter
-\let\oldhypertarget\hypertarget
-\renewcommand{\hypertarget}[2]{%
-	\oldhypertarget{#1}{#2}%
-	\protected@write\@mainaux{}{%
-		\string\expandafter\string\gdef
-		\string\csname\string\detokenize{#1}\string\endcsname{#2}%
-	}%
-}
-\newcommand{\myhyperlink}[1]{%
-	\hyperlink{#1}{\csname #1\endcsname}%
-}
-\makeatother
-
-% The counters. They can be defined for each publication (journal papers, books, and so on).
-\newcounter{ConferencePublications}
-\setcounter{ConferencePublications}{0}
-
-% These commands have to be ridefined for each publication type (journal, paper, etc.)
-\newcommand{\conferencePublications}[1][]{
-	\stepcounter{ConferencePublications}
-	\hypertarget{#1}{[C\theConferencePublications]}
-	
-}
-
-\newcommand{\refconferencesPublications}[1][]{
-	\myhyperlink{#1}
-}
-
 \newcommand*{\SignatureAndDate}[1]{%
 	\par\noindent\makebox[2.5in]{Place \textsc{(Province)}, \today}
 	\par\noindent\makebox[2.5in]{\hrulefill} \hfill\makebox[2.0in]{\hrulefill}%
@@ -189,7 +160,9 @@
 \section{Research activities}
 
 \ecvitem{}{\textbf{Stability of piecewise-linear systems}}
-\ecvitem{}{Something related to the piecewise-linear systems \refconferencesPublications[FirstPubLabel], \refconferencesPublications[SecondPubLabel] ad \refconferencesPublications[ThirdPubLabel].}
+\ecvitem{}{Something related to the piecewise-linear systems 
+\ecvrefConferencePublications[FirstPubLabel], \ecvrefConferencePublications[SecondPubLabel] ad 
+\ecvrefConferencePublications[ThirdPubLabel].}
 
 \pdfbookmark{Publications}{Publications}
 \section{Publications}
@@ -198,11 +171,14 @@
 \ecvitem{}{\textbf{Refereed conference proceedings}}
 \\
 
-\ecvitem[10pt]{\vspace{-0.25cm}\conferencePublications[FirstPubLabel]}{Details related to the conference paper}
+\ecvitem[10pt]{\vspace{-0.25cm}\ecvdisplayConferencePublications[FirstPubLabel]}{Details related to 
+the conference paper}
 
-\ecvitem[10pt]{\vspace{-0.25cm}\conferencePublications[SecondPubLabel]}{Details related to the conference paper}
+\ecvitem[10pt]{\vspace{-0.25cm}\ecvdisplayConferencePublications[SecondPubLabel]}{Details related 
+to the conference paper}
 
-\ecvitem[10pt]{\vspace{-0.25cm}\conferencePublications[ThirdPubLabel]}{Details related to the conference paper}
+\ecvitem[10pt]{\vspace{-0.25cm}\ecvdisplayConferencePublications[ThirdPubLabel]}{Details related to 
+the conference paper}
 
 
 \end{europecv}
