--- a/europecv.tex
+++ b/europecv.tex
@@ -156,8 +156,7 @@ The following options can be used with the \texttt{\textbackslash documentclass}
 	\ecvitem{\texttt{utf8}}{Chooses UTF-8 input encoding. This is the default.}
 	\ecvitem[15pt]{Other options}{The other available input encodings are: \texttt{ansinew}, \texttt{applemac}, \texttt{ascii}, \texttt{cp850}, \texttt{cp852}, \texttt{cp858}, \texttt{cp437}, \texttt{cp437de}, \texttt{cp865}, \texttt{cp866}, \texttt{cp1250}, \texttt{cp1251}, \texttt{cp1252}, \texttt{cp1257}, \texttt{decmulti}, \texttt{koi8-r}, \texttt{koi8-ru}, \texttt{koi8-u}, \texttt{latin1}, \texttt{latin2}, \texttt{latin3}, \texttt{latin4}, \texttt{latin5}, \texttt{latin9}, \texttt{latin10},   \texttt{maccyr}, \texttt{macukr}, \texttt{next}.}
 	\ecvitem{Notes}{Any of the above options causes the \textsf{inputenc} package to be loaded with
-	the specified encoding\footnote{\texttt{utf8}, loads \textsf{inputenc} with the
-	option~\texttt{utf8x}.} so that you do not have to load that package in your document.}
+	the specified encoding so that you do not have to load that package in your document.}
 
 	\section{Font options}
 	\ecvitem{\texttt{helvetica}}{Uses Helvetica as the default font.}
