--- a/europecv.cls
+++ b/europecv.cls
@@ -7,7 +7,7 @@
 % See  https://ctan.mirror.garr.it/mirrors/CTAN/help/Catalogue/licenses.lppl.html
 % for the details of that license
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesClass{europecv}[13/03/2022 (Unicode TeX detection) European curriculum vitae class]
+\ProvidesClass{europecv}[21/06/2022 (Unicode TeX detection) European curriculum vitae class]
 
 % CV models and instructions:
 %   http://europass.cedefop.eu.int/htm/index.htm
@@ -445,7 +445,7 @@
 \newcommand\ecvfootnote[1]{\def\ecv@rfoot{#1}}
 \ecvfootnote{}
 
-\AddToHook{begindocument/before}{%
+\AtBeginDocument{%
 
 \RequirePackage{etoolbox} %important for \AfterPreamble
 
