--- a/europecv.tex
+++ b/europecv.tex
@@ -52,7 +52,7 @@
     Faculty of Electrical Engineering\\
     Czech Technical University in Prague, Czech Republic\\
 }
-\date{March 13, 2022}
+\date{June 21, 2022}
 
 
 \begin{document}
@@ -925,7 +925,8 @@ Tsolomitis} for his suggestions into the 2020.01.06 package release. Thanks to \
 Davide Peressoni} for the biber support (2020.10.26 package release). Thanks to \textbf{Nuno
 Fachada} for his help with the Portuguese translation (2021.02.05 package release). Thanks to
 \textbf{Pancho Horrillo} for his fix ($\#25$, 2021.05.09 package release). Thanks to
-\textbf{Alecu Ștefan-Iulian} for his fix ($\#26$ and $\#27$, 2022.03.13 package release).
+\textbf{Alecu Ștefan-Iulian} for his fix ($\#26$ and $\#27$, 2022.03.13 package release). Thanks to 
+\textit{Scott Kostyshak} for his fix ($\#29$ and $\#30$, 2022.06.21 package release).
 
 %%% END SECTION ============================================================
 
